third_party/move/move-compiler-v2/tests/simplifier-elimination/moved_var_not_simplified2.exp
// -- Model dump before bytecode pipeline
module 0xc0ffee::m {
    public fun test(): u8 {
        {
          let x: u8 = 40;
          {
            let y: u8 = Move(x);
            {
              let _z: u8 = x;
              y
            }
          }
        }
    }
} // end 0xc0ffee::m


Diagnostics:
error: cannot move local `x` since it is still in use
  ┌─ tests/simplifier-elimination/moved_var_not_simplified2.move:4:17
  │
4 │         let y = move x;
  │                 ^^^^^^ attempted to move here
5 │         let _z = x;
  │                  - used here
